--- a/css/classes.css
+++ b/css/classes.css
@@ -7,7 +7,7 @@
 .classes-hero {
     position: relative;
     width: 100%;
-    height: 60vh;
+    height: 70vh;
     min-height: 400px;
     overflow: hidden;
     display: flex;
@@ -29,7 +29,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center;
+    object-position: center 20%;
 }
 
 .classes-hero-overlay {
